--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,4 +1,6 @@
-﻿<form method="post">
+﻿<h1>@Environment.MachineName</h1>
+
+<form method="post">
     <label>Username:</label>
     <input type="text" name="username" required />
     <label>Password:</label>
